# homework2

./: Pipfile  README.md  notebook.ipynb  notebook.py  pyproject.toml  requirements.txt
