[tool.poetry]
name = "working-with-data-2"
version = "0.1.0"
description = ""
authors = ["Yahya Gilany <yahya.gilany@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.25.2"
black = "^23.9.1"
numpy = "^1.25.2"
testbook = "^0.4.2"
pytest = "^7.4.2"
jupyter = "^1.0.0"
opendatasets = "^0.1.22"
pandas = "^2.1.0"
sqlalchemy = "^2.0.20"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
matplotlib = "^3.8.0"
plotly = "^5.16.1"
seaborn = "^0.12.2"
lxml = "^4.9.3"
html5lib = "^1.1"
ipywidgets = "^8.1.1"
psycopg2-binary = "^2.9.7"
beautifulsoup4 = "^4.12.2"
pymongo = {extras = ["srv"], version = "^4.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
